examples/test/testpolicy16669.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16669
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key45: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value5
          key8: value14
          key28: value22
      podSelector:
        matchLabels:
          key17: value2
          key46: value30
          key8: value33
